# zorba-security-module

./: CMakeLists.txt
src/: CMakeLists.txt  hash.xq  hmac.xq
src/com/zorba-xquery/www/modules/: CMakeLists.txt
src/com/zorba-xquery/www/modules/security/: CMakeLists.txt  hash.xq  hmac.xq
src/com/zorba-xquery/www/modules/security/hash.xq.src/: hash.cpp  hash.h  md5_impl.cpp  md5_impl.h  sha1.cpp  sha1.h
src/com/zorba-xquery/www/modules/security/hmac.xq.src/: hmac.cpp  hmac.h  hmac_sha1.cpp  hmac_sha1.h  sha1.cpp  sha1.h
src/hash.xq.src/: hash.cpp  hash.h
src/hmac.xq.src/: hmac.cpp  hmac.h
test/ExpQueryResults/security/: hash-binary.xml.res  hash-md5.xml.res  hash-sha1.xml.res  hash-sha256.xml.res  hmac-sha1.xml.res  hmac-sha256.xml.res
test/Queries/security/: hash-binary.xq  hash-binary2.xq  hash-md5.xq  hash-sha1.xq  hash-sha256.xq  hmac-sha1.xq  hmac-sha256.xq
